# dnssd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: dnssd-advertiser.cpp  dnssd-browser.cpp
include/dnssd/: Advertiser.h  Browser.h  ServiceDescription.h
include/dnssd/bonjour/: Bonjour.h  BonjourAdvertiser.h  BonjourAdvertiserImpl.h  BonjourBrowser.h  BonjourBrowserImpl.h  BonjourTXTRecord.h  BonjourTxtRecord.h  ScopedDNSServiceRef.h  ScopedDnsServiceRef.h  Service.h  SharedConnection.h  TXTRecord.h
include/dnssd/common/: AdvertiserBase.h  AdvertiserInterface.h  BrowserBase.h  CommonAdvertiserInterface.h  CommonBrowserInterface.h  Debug.h  Error.h  IAdvertiser.h  IBrowser.h  Log.h  Result.h  TxtRecord.h  Util.h
include/dnssd/internal/: Debug.h  Error.h  Service.h  TXTRecord.h
include/dnssd/private/: Error.h  ScopedDNSServiceRef.h  Service.h  SharedConnection.h  TXTRecord.h
src/: Advertiser.cpp  Browser.cpp  ServiceDescription.cpp
src/bonjour/: Bonjour.cpp  BonjourAdvertiser.cpp  BonjourAdvertiserImpl.cpp  BonjourBrowser.cpp  BonjourBrowserImpl.cpp  BonjourTXTRecord.cpp  BonjourTxtRecord.cpp  ScopedDNSServiceRef.cpp  ScopedDnsServiceRef.cpp  Service.cpp  SharedConnection.cpp  TXTRecord.cpp
src/common/: Debug.cpp  Error.cpp  Log.cpp  Result.cpp
src/internal/: Debug.cpp  Error.cpp  ScopedDNSServiceRef.cpp  Service.cpp  SharedConnection.cpp  TXTRecord.cpp
src/private/: Debug.cpp  Error.cpp  ScopedDNSServiceRef.cpp  Service.cpp  SharedConnection.cpp  TXTRecord.cpp
test/: dns-sd-advertiser.cpp  dns-sd-browser.cpp  dnssd-advertiser.cpp  dnssd-browser.cpp
